--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2141,8 +2141,8 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-qUWQaoShbA {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 120px;
+  padding-bottom: 120px;
   background-image: url("../../../assets/images/business.companies-900x510.jpg");
 }
 .cid-qUWQaoShbA .mbr-text,
@@ -2155,6 +2155,9 @@ body {
 .cid-qUWQaoShbA .mbr-text,
 .cid-qUWQaoShbA .mbr-section-btn B {
   color: #d12112;
+}
+.cid-qUWQaoShbA H1 {
+  color: #ac120c;
 }
 .cid-qUWQarnrto {
   background-image: url("../../../assets/images/mbr-1797x1080.jpg");
