create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2186,428 +2186,6 @@ body {
 .cid-qUWQarnrto B {
   color: #ac120c;
 }
-.cid-qVlakLr2mv {
-  background-image: url("../../../assets/images/global-hand-business-747x653.jpg");
-}
-.cid-qVlakLr2mv .mbr-text,
-.cid-qVlakLr2mv .mbr-section-btn {
-  text-align: center;
-  color: #073b4c;
-}
-.cid-qVlakLr2mv B {
-  color: #232323;
-}
-.cid-qVlakLr2mv .mbr-text,
-.cid-qVlakLr2mv .mbr-section-btn B {
-  color: #073b4c;
-}
-.cid-qV1UPwhjRq .navbar {
-  padding: .5rem 0;
-  background: #333333;
-  transition: none;
-  min-height: 77px;
-}
-.cid-qV1UPwhjRq .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
-}
-.cid-qV1UPwhjRq a {
-  font-style: normal;
-}
-.cid-qV1UPwhjRq .nav-item span {
-  padding-right: 0.4em;
-  line-height: 0.5em;
-  vertical-align: text-bottom;
-  position: relative;
-  text-decoration: none;
-}
-.cid-qV1UPwhjRq .nav-item a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0.7rem 0 !important;
-  margin: 0rem .65rem !important;
-}
-.cid-qV1UPwhjRq .nav-item:focus,
-.cid-qV1UPwhjRq .nav-link:focus {
-  outline: none;
-}
-.cid-qV1UPwhjRq .btn {
-  padding: 0.4rem 1.5rem;
-  display: inline-flex;
-  align-items: center;
-}
-.cid-qV1UPwhjRq .btn .mbr-iconfont {
-  font-size: 1.6rem;
-}
-.cid-qV1UPwhjRq .menu-logo {
-  margin-right: auto;
-}
-.cid-qV1UPwhjRq .menu-logo .navbar-brand {
-  display: flex;
-  margin-left: 5rem;
-  padding: 0;
-  transition: padding .2s;
-  min-height: 3.8rem;
-  align-items: center;
-}
-.cid-qV1UPwhjRq .menu-logo .navbar-brand .navbar-caption-wrap {
-  display: -webkit-flex;
-  -webkit-align-items: center;
-  align-items: center;
-  word-break: break-word;
-  min-width: 7rem;
-  margin: .3rem 0;
-}
-.cid-qV1UPwhjRq .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
-  line-height: 1.2rem !important;
-  padding-right: 2rem;
-}
-.cid-qV1UPwhjRq .menu-logo .navbar-brand .navbar-logo {
-  font-size: 4rem;
-  transition: font-size 0.25s;
-}
-.cid-qV1UPwhjRq .menu-logo .navbar-brand .navbar-logo img {
-  display: flex;
-}
-.cid-qV1UPwhjRq .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
-  transition: font-size 0.25s;
-}
-.cid-qV1UPwhjRq .navbar-toggleable-sm .navbar-collapse {
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-  padding-right: 5rem;
-  width: auto;
-}
-.cid-qV1UPwhjRq .navbar-toggleable-sm .navbar-collapse .navbar-nav {
-  flex-wrap: wrap;
-  -webkit-flex-wrap: wrap;
-  padding-left: 0;
-}
-.cid-qV1UPwhjRq .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
-  -webkit-align-self: center;
-  align-self: center;
-}
-.cid-qV1UPwhjRq .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
-  padding-left: 0;
-  padding-bottom: 0;
-}
-.cid-qV1UPwhjRq .dropdown .dropdown-menu {
-  background: #333333;
-  display: none;
-  position: absolute;
-  min-width: 5rem;
-  padding-top: 1.4rem;
-  padding-bottom: 1.4rem;
-  text-align: left;
-}
-.cid-qV1UPwhjRq .dropdown .dropdown-menu .dropdown-item {
-  width: auto;
-  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
-}
-.cid-qV1UPwhjRq .dropdown .dropdown-menu .dropdown-item::after {
-  right: 0.5rem;
-}
-.cid-qV1UPwhjRq .dropdown .dropdown-menu .dropdown-submenu {
-  margin: 0;
-}
-.cid-qV1UPwhjRq .dropdown.open > .dropdown-menu {
-  display: block;
-}
-.cid-qV1UPwhjRq .navbar-toggleable-sm.opened:after {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  content: '';
-  background-color: rgba(0, 0, 0, 0.1);
-  left: 0;
-  bottom: 0;
-  transform: translateY(100%);
-  -webkit-transform: translateY(100%);
-  z-index: 1000;
-}
-.cid-qV1UPwhjRq .navbar.navbar-short {
-  min-height: 60px;
-  transition: all .2s;
-}
-.cid-qV1UPwhjRq .navbar.navbar-short .navbar-toggler-right {
-  top: 20px;
-}
-.cid-qV1UPwhjRq .navbar.navbar-short .navbar-logo a {
-  font-size: 2.5rem !important;
-  line-height: 2.5rem;
-  transition: font-size 0.25s;
-}
-.cid-qV1UPwhjRq .navbar.navbar-short .navbar-logo a .mbr-iconfont {
-  font-size: 2.5rem !important;
-}
-.cid-qV1UPwhjRq .navbar.navbar-short .navbar-logo a img {
-  height: 3rem !important;
-}
-.cid-qV1UPwhjRq .navbar.navbar-short .navbar-brand {
-  min-height: 3rem;
-}
-.cid-qV1UPwhjRq button.navbar-toggler {
-  width: 31px;
-  height: 18px;
-  cursor: pointer;
-  transition: all .2s;
-  top: 1.5rem;
-  right: 1rem;
-}
-.cid-qV1UPwhjRq button.navbar-toggler:focus {
-  outline: none;
-}
-.cid-qV1UPwhjRq button.navbar-toggler .hamburger span {
-  position: absolute;
-  right: 0;
-  width: 30px;
-  height: 2px;
-  border-right: 5px;
-  background-color: #ffffff;
-}
-.cid-qV1UPwhjRq button.navbar-toggler .hamburger span:nth-child(1) {
-  top: 0;
-  transition: all .2s;
-}
-.cid-qV1UPwhjRq button.navbar-toggler .hamburger span:nth-child(2) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-qV1UPwhjRq button.navbar-toggler .hamburger span:nth-child(3) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-qV1UPwhjRq button.navbar-toggler .hamburger span:nth-child(4) {
-  top: 16px;
-  transition: all .2s;
-}
-.cid-qV1UPwhjRq nav.opened .hamburger span:nth-child(1) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-qV1UPwhjRq nav.opened .hamburger span:nth-child(2) {
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-  transition: all .25s;
-}
-.cid-qV1UPwhjRq nav.opened .hamburger span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  transition: all .25s;
-}
-.cid-qV1UPwhjRq nav.opened .hamburger span:nth-child(4) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-qV1UPwhjRq .collapsed.navbar-expand {
-  flex-direction: column;
-}
-.cid-qV1UPwhjRq .collapsed .btn {
-  display: flex;
-}
-.cid-qV1UPwhjRq .collapsed .navbar-collapse {
-  display: none !important;
-  padding-right: 0 !important;
-}
-.cid-qV1UPwhjRq .collapsed .navbar-collapse.collapsing,
-.cid-qV1UPwhjRq .collapsed .navbar-collapse.show {
-  display: block !important;
-}
-.cid-qV1UPwhjRq .collapsed .navbar-collapse.collapsing .navbar-nav,
-.cid-qV1UPwhjRq .collapsed .navbar-collapse.show .navbar-nav {
-  display: block;
-  text-align: center;
-}
-.cid-qV1UPwhjRq .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
-.cid-qV1UPwhjRq .collapsed .navbar-collapse.show .navbar-nav .nav-item {
-  clear: both;
-}
-.cid-qV1UPwhjRq .collapsed .navbar-collapse.collapsing .navbar-buttons,
-.cid-qV1UPwhjRq .collapsed .navbar-collapse.show .navbar-buttons {
-  text-align: center;
-}
-.cid-qV1UPwhjRq .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
-.cid-qV1UPwhjRq .collapsed .navbar-collapse.show .navbar-buttons:last-child {
-  margin-bottom: 1rem;
-}
-.cid-qV1UPwhjRq .collapsed button.navbar-toggler {
-  display: block;
-}
-.cid-qV1UPwhjRq .collapsed .navbar-brand {
-  margin-left: 1rem !important;
-}
-.cid-qV1UPwhjRq .collapsed .navbar-toggleable-sm {
-  flex-direction: column;
-  -webkit-flex-direction: column;
-}
-.cid-qV1UPwhjRq .collapsed .dropdown .dropdown-menu {
-  width: 100%;
-  text-align: center;
-  position: relative;
-  opacity: 0;
-  display: block;
-  height: 0;
-  visibility: hidden;
-  padding: 0;
-  transition-duration: .5s;
-  transition-property: opacity,padding,height;
-}
-.cid-qV1UPwhjRq .collapsed .dropdown.open > .dropdown-menu {
-  position: relative;
-  opacity: 1;
-  height: auto;
-  padding: 1.4rem 0;
-  visibility: visible;
-}
-.cid-qV1UPwhjRq .collapsed .dropdown .dropdown-submenu {
-  left: 0;
-  text-align: center;
-  width: 100%;
-}
-.cid-qV1UPwhjRq .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
-  margin-top: 0;
-  position: inherit;
-  right: 0;
-  top: 50%;
-  display: inline-block;
-  width: 0;
-  height: 0;
-  margin-left: .3em;
-  vertical-align: middle;
-  content: "";
-  border-top: .30em solid;
-  border-right: .30em solid transparent;
-  border-left: .30em solid transparent;
-}
-@media (max-width: 991px) {
-  .cid-qV1UPwhjRq .navbar-expand {
-    flex-direction: column;
-  }
-  .cid-qV1UPwhjRq img {
-    height: 3.8rem !important;
-  }
-  .cid-qV1UPwhjRq .btn {
-    display: flex;
-  }
-  .cid-qV1UPwhjRq button.navbar-toggler {
-    display: block;
-  }
-  .cid-qV1UPwhjRq .navbar-brand {
-    margin-left: 1rem !important;
-  }
-  .cid-qV1UPwhjRq .navbar-toggleable-sm {
-    flex-direction: column;
-    -webkit-flex-direction: column;
-  }
-  .cid-qV1UPwhjRq .navbar-collapse {
-    display: none !important;
-    padding-right: 0 !important;
-  }
-  .cid-qV1UPwhjRq .navbar-collapse.collapsing,
-  .cid-qV1UPwhjRq .navbar-collapse.show {
-    display: block !important;
-  }
-  .cid-qV1UPwhjRq .navbar-collapse.collapsing .navbar-nav,
-  .cid-qV1UPwhjRq .navbar-collapse.show .navbar-nav {
-    display: block;
-    text-align: center;
-  }
-  .cid-qV1UPwhjRq .navbar-collapse.collapsing .navbar-nav .nav-item,
-  .cid-qV1UPwhjRq .navbar-collapse.show .navbar-nav .nav-item {
-    clear: both;
-  }
-  .cid-qV1UPwhjRq .navbar-collapse.collapsing .navbar-buttons,
-  .cid-qV1UPwhjRq .navbar-collapse.show .navbar-buttons {
-    text-align: center;
-  }
-  .cid-qV1UPwhjRq .navbar-collapse.collapsing .navbar-buttons:last-child,
-  .cid-qV1UPwhjRq .navbar-collapse.show .navbar-buttons:last-child {
-    margin-bottom: 1rem;
-  }
-  .cid-qV1UPwhjRq .dropdown .dropdown-menu {
-    width: 100%;
-    text-align: center;
-    position: relative;
-    opacity: 0;
-    display: block;
-    height: 0;
-    visibility: hidden;
-    padding: 0;
-    transition-duration: .5s;
-    transition-property: opacity,padding,height;
-  }
-  .cid-qV1UPwhjRq .dropdown.open > .dropdown-menu {
-    position: relative;
-    opacity: 1;
-    height: auto;
-    padding: 1.4rem 0;
-    visibility: visible;
-  }
-  .cid-qV1UPwhjRq .dropdown .dropdown-submenu {
-    left: 0;
-    text-align: center;
-    width: 100%;
-  }
-  .cid-qV1UPwhjRq .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
-    margin-top: 0;
-    position: inherit;
-    right: 0;
-    top: 50%;
-    display: inline-block;
-    width: 0;
-    height: 0;
-    margin-left: .3em;
-    vertical-align: middle;
-    content: "";
-    border-top: .30em solid;
-    border-right: .30em solid transparent;
-    border-left: .30em solid transparent;
-  }
-}
-@media (min-width: 767px) {
-  .cid-qV1UPwhjRq .menu-logo {
-    flex-shrink: 0;
-  }
-}
-.cid-qV1UPwhjRq .navbar-collapse {
-  flex-basis: auto;
-}
-.cid-qV1UPwhjRq .nav-link:hover,
-.cid-qV1UPwhjRq .dropdown-item:hover {
-  color: #c1c1c1 !important;
-}
-.cid-qVl86ANWoC {
-  background-image: url("../../../assets/images/mbr-2-1620x1080.jpg");
-}
-.cid-qVl86ANWoC h1 {
-  color: #616161;
-}
-.cid-qVl86ANWoC h2,
-.cid-qVl86ANWoC h3,
-.cid-qVl86ANWoC p {
-  color: #767676;
-}
-.cid-qVl86ANWoC .mbr-section-subtitle {
-  font-style: italic;
-}
-.cid-qVl86ANWoC H1 {
-  color: #073b4c;
-}
-.cid-qVl86ANWoC H3 {
-  color: #080b79;
-}
-.cid-qVl86ANWoC P {
-  color: #073b4c;
-}
-.cid-qVl86ANWoC B {
-  color: #073b4c;
-}
 .cid-qUWsZIbo1p .navbar {
   padding: .5rem 0;
   background: #333333;
@@ -2990,6 +2568,8 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-qUWsZK9wQv {
+  padding-top: 120px;
+  padding-bottom: 120px;
   background-image: url("../../../assets/images/employees-2-1688x1125.jpg");
 }
 .cid-qUWsZK9wQv .mbr-text,
@@ -3002,6 +2582,9 @@ body {
 .cid-qUWsZK9wQv .mbr-text,
 .cid-qUWsZK9wQv .mbr-section-btn B {
   color: #232323;
+}
+.cid-qUWsZK9wQv H1 {
+  color: #635a51;
 }
 .cid-qUWsZMGzFq {
   background-image: url("../../../assets/images/mbr-1-1620x1080.jpg");
